--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "local": "ts-node src/delivery/local/index.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "ts-mockito": "^2.6.1"
   }
 }
