--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "rest": "ts-node src/delivery/rest/index.ts",
     "local": "ts-node src/delivery/local/index.ts",
     "test": "jest"
   },
@@ -11,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "dotenv": "^16.4.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-mockito": "^2.6.1"
